# micro-pupper

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  sdkconfig  sdkconfig.defaults.esp32s3  sdkconfig.old
HeySanta/: HeySanta.cc  emoji_display.cc  mmap_generate_assets_A.h
emoji/: Whole_elf.aaf  bell.aaf  happy.aaf  heart.aaf  sleep.aaf  (+1 more)
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  application.h  device_state_event.cc  device_state_event.h  idf_component.yml  jojo's_bizzare_walks.c  main.c  mcp_server.cc  mmap_generate_emoji.h  ota.cc  ota.h
main/assets/common/: active.p3  deactivate.p3  tahu.p3
main/ble/: ble_servo.c  ble_servo.h
main/boards/HeySanta/: HeySanta.cc  config.h  mmap_generate_assets_A.h  mmap_generate_emoji.h  sts3032_servo.c  sts3032_servo.h
main/boards/atk-dnesp32s3-box0/: atk_dnesp32s3_box0.cc  config.h
main/boards/common/: board.h  wifi_board.cc
main/dog/: dog_config.c  dog_config.h  dog_imu.c
main/examples/: README.md  example_modes.c  example_modes.h
main/gaits/: crawl_gait.c  crawl_gait.h  creep_gait.c  creep_gait.h  gait_common.h  trot_gait.c  trot_gait.h  walk_gait.c  walk_gait.h
main/protocols/: ble_protocol.cc  ble_protocol.h  protocol.cc  protocol.h
main/reaction/: gyro_balance.c  gyro_balance.h  pressure_balance.c  pressure_balance.h  reaction_config.c  reaction_config.h  walk_forward_reaction.c  walk_forward_reaction.h
main/servo/: servo_pressure.c  servo_pressure.h
main/util/: sts3032_config.c  sts3032_config.h
(+20 files in other folders)
